exercises/rate-limiting/httpbin-ingress-rates-key.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: httpbin-demo
  annotations:
    konghq.com/path: "/headers"
    konghq.com/plugins: "httpbin-auth,httpbin-rate-limiting"
spec:
  type: ExternalName
  externalName: httpbin.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: httpbin-demo
  annotations: 
    konghq.com/strip-path: "true"
    konghq.com/plugins: "httpbin-auth,httpbin-rate-limiting"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: Prefix
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
